--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,5 @@
+title: "Oblique Strategies"
+description: "Random Strategies Generator"
+show_downloads: false
 theme: jekyll-theme-minimal
+encoding: UTF-8
